--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -48,7 +48,9 @@ library(officer)
 
 
 ##Add time_it = TRUE to opts_chunk to time all chunks.
-
+#Set opts_chunk error = FALSE to debug.  It will force the app to stop on an error.
+#error can also be overridden at each individual chunk
+#Be sure error is set to TRUE before pushing to Github
 knitr::opts_chunk$set(echo = TRUE,
                 message = FALSE,
                 warning = FALSE,
@@ -2929,19 +2931,19 @@ if (nrow(tab14_10) != 0){
 
 ```{r monthly counts by enc type, echo = F, include=T}
 dxByMonEncTp <- run_query(
-                      paste0("SELECT YEAR(adate) as year, MONTH(adate) as month, enctype, count(*) as Freq
+                      paste0("SELECT YEAR(adate) as year, MONTH(adate) as month, encType, count(*) as Freq
 	                            from ", diagnoses, "
                              WHERE YEAR(adate) >= 2005
                              AND DX_ORIGIN in ('BI')
-                             GROUP BY YEAR(adate), MONTH(adate), enctype",
+                             GROUP BY YEAR(adate), MONTH(adate), encType",
                             sep=" "),
                  max=maxQryRows
                  )
 dxByMonEncTp <- within(dxByMonEncTp,{
   monYr <- as.Date(paste(as.character(year),as.character(month),'01',sep="-"))
 })
-dxByMonEncTp <- merge(dxByMonEncTp,encLabels, by.x='enctype', by.y='code', all.x=TRUE) 
-dxByMonEncTp <- within(dxByMonEncTp,{decode <- ifelse(!is.na(decode),decode, ifelse(is.na(enctype), 'Missing', 'Invalid'))})
+dxByMonEncTp <- merge(dxByMonEncTp,encLabels, by.x='encType', by.y='code', all.x=TRUE) 
+dxByMonEncTp <- within(dxByMonEncTp,{decode <- ifelse(!is.na(decode),decode, ifelse(is.na(encType), 'Missing', 'Invalid'))})
 ```
 
 
@@ -2957,7 +2959,7 @@ fig4_timeTest <- within(fig4_timeTest,{decode <- ifelse(!is.na(decode),decode, i
 ## Figure 4a. Count of Billing Diagnoses by Year and Month in Ambulatory Encounters 
 
 ```{r Count of diagnoses by year and month in ambulatory encounters, echo = F, include=T, dpi=500, fig.height=5, fig.width=8.5}
-ggplot(subset(dxByMonEncTp,enctype == 'AV'), aes(monYr, Freq)) + geom_line(size=.75) +
+ggplot(subset(dxByMonEncTp,encType == 'AV'), aes(monYr, Freq)) + geom_line(size=.75) +
   scale_x_date(date_labels = "%b %y",date_breaks='1 year') + xlab("Month of encounter") + ylab("Frequency")+theme(axis.text.x = element_text(angle = 45, hjust = 1)) +  scale_color_brewer(palette ="Paired") +
   geom_point(data=subset(fig4_timeTest, iqrTest==T & outcome=='AV') %>% rename(monYr=testMonth, rowCnt=Freq2), aes(monYr, rowCnt))
 ```
@@ -2965,7 +2967,7 @@ ggplot(subset(dxByMonEncTp,enctype == 'AV'), aes(monYr, Freq)) + geom_line(size=
 ## Figure 4b. Count of Billing Diagnoses by Year and Month, other Encounter Types
 
 ```{r Count of diagnoses by year and month other encounter types, echo = F, include=T, dpi=500, fig.height=5, fig.width=8.5}
-ggplot(subset(dxByMonEncTp,enctype != 'AV'), aes(monYr, Freq, colour=decode)) + geom_line(size=.75) +
+ggplot(subset(dxByMonEncTp,encType != 'AV'), aes(monYr, Freq, colour=decode)) + geom_line(size=.75) +
   scale_x_date(date_labels = "%b %y",date_breaks='1 year') + xlab("Month of encounter") + ylab("Frequency")+theme(axis.text.x = element_text(angle = 45, hjust = 1),legend.position="bottom")+labs(color='Encounter type') + scale_color_brewer(palette ="Paired") +
   geom_point(data=subset(fig4_timeTest, iqrTest==T & outcome !='AV') %>% rename(monYr=testMonth, rowCnt=Freq2), aes(monYr, rowCnt, colour=decode))
 
