--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -74,14 +74,14 @@ knitr::knit_hooks$set(time_it = local({
 }))
 
 # supporting look up tables
-specialties <- chordsTables::specialties
-prov_type <- chordsTables::prov_type
+specialties <- data.frame(lapply(chordsTables::specialties, as.character), stringsAsFactors=FALSE)
+prov_type <- data.frame(lapply(chordsTables::prov_type, as.character), stringsAsFactors=FALSE)
 
 # ISO language lookup
-isoLang <- chordsTables::isoLang
+isoLang <- data.frame(lapply(chordsTables::isoLang, as.character), stringsAsFactors=FALSE)
 
 # VDW value sets
-valSets <- chordsTables::valSets
+valSets <- data.frame(lapply(chordsTables::valSets, as.character), stringsAsFactors=FALSE)
 
 maxQryRows = 0
 ```
