--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -2618,7 +2618,7 @@ fig3_timeTest <-  timeTest(time=as.Date(encTypeBymonYr$adate_YM),
                            Freq=encTypeBymonYr$rowCnt, 
                            outcome=encTypeBymonYr$encType )
 fig3_timeTest <- merge(fig3_timeTest,encLabels, by.x='outcome', by.y='code', all.x=TRUE) 
-fig3_timeTest <- within(fig3_timeTest,{decode <- ifelse(!is.na(decode),decode, ifelse(is.na(encType), 'Missing', 'Invalid'))})
+fig3_timeTest <- within(fig3_timeTest,{decode <- ifelse(!is.na(decode),decode, ifelse(is.na(outcome), 'Missing', 'Invalid'))})
 
 ```
 
@@ -2952,7 +2952,7 @@ fig4_timeTest <-  timeTest(time=as.Date(dxByMonEncTp$monYr),
                            Freq=dxByMonEncTp$Freq, 
                            outcome=dxByMonEncTp$encType )
 fig4_timeTest <- merge(fig4_timeTest,encLabels, by.x='outcome', by.y='code', all.x=TRUE) 
-fig4_timeTest <- within(fig4_timeTest,{decode <- ifelse(!is.na(decode),decode, ifelse(is.na(encType), 'Missing', 'Invalid'))})
+fig4_timeTest <- within(fig4_timeTest,{decode <- ifelse(!is.na(decode),decode, ifelse(is.na(outcome), 'Missing', 'Invalid'))})
 
 ```
 
